Try fixing composer install issue
Composer: Your requirements could not be resolved to an installable set of packages.

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "VilledeMontreal/retl",
+    "name": "villedemontreal/retl",
     "description": "Reversible ETL package - under dev",
     "autoload": {
         "psr-4": {
