--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "villedemontreal/retl",
+    "name": "VilleDeMontreal/retl",
     "description": "Reversible ETL package - under dev",
     "autoload": {
         "psr-4": {
